# AirTime

./: .gitignore  MANIFEST.in  pyproject.toml
.github/workflows/: python-package.yml
src/AirTime/: __init__.py  body.py  camera.py  gymnast.py  joint.py  matrix.py  quaternion.py  vector.py
src/AirTime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/AirTime/shaders/: default.frag
src/airtime/: main.py  rotating_body.py
src/airtime/shaders/: default.vert
src/airtimew/: body.py  vector.py
tests/airtime/: test_quaternion.py  test_vector.py
